# app/Http/Controllers/PhoneController.php
@@ -34,6 +34,24 @@ class PhoneController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
+    /**
+     * @OA\Get(
+     *     path="/api/phones/{id}",
+     *     summary="Get a specific phone",
+     *     tags={"phones"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID of the phone to retrieve",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(response=200, description="Phoner Detail" ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     *     security={{"bearerAuth":{}}}
+     * )
+     */
     public function show($phoneId)
     {
         $phone=Phone::with('user')->find($phoneId);
